@@ -17,6 +17,7 @@
 - Fix: make webvtt-full work correctly with multi-byte utf-8 characters
 - Fix: encoding of solid block in latin-1 and unicode
 - Fix: McPoodle Broadcast Raw format for field 1
+- Fix: Incorrect skipping of packets
 
 0.94 (2021-12-14)
 -----------------
